--- a/telecomminucation/graph.ipynb
+++ b/telecomminucation/graph.ipynb
@@ -227,7 +227,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# $S_P = \\frac{G(1 + G + aG(1 + G + aG /2))e^{-G(1+2a)}}{G(1 + 2a) - (1 - e^{-aG}) + (1 + aG)e^{-G(1 + a)}}$の描画"
+    "# $S_P = \\frac{G(1 + G + aG(1 + G + \\frac{aG}{2}))e^{-G(1+2a)}}{G(1 + 2a) - (1 - e^{-aG}) + (1 + aG)e^{-G(1 + a)}}$の描画"
    ]
   },
   {
