--- a/telecomminucation/graph.ipynb
+++ b/telecomminucation/graph.ipynb
@@ -165,7 +165,7 @@
     "# グラフを描画\n",
     "plt.plot(G, S_p_p, label= \"Pure ALOHA\")\n",
     "plt.plot(G, S_p_s, label= \"Slotted ALOHA\")\n",
-    "plt.xlabel('Traffic(G)')\n",
+    "plt.xlabel(r'Traffic(G)')\n",
     "plt.ylabel(r'Throughput($S_p$)')\n",
     "plt.title(r'Function: $S_p = Ge^{-2G}$ & $S_p = Ge^{-G}$')\n",
     "plt.xticks(np.arange(0, 10, step=1))\n",
