わからんちんちん

--- a/siki.tex
+++ b/siki.tex
@@ -124,7 +124,22 @@
   & & \\ \hline
 \end{tabular}
 
+\begin{align*}
+  S_1 &= \frac{h_{22}}{h_{11}h_{22} - h_{12}h_{21}} \cdot y_1 - \frac{h_{12}}{h_{11}h_{22} - h_{12}h_{21}} \cdot y_2\\
+  S_2 &= - \frac{h_{21}}{h_{11}h_{22} - h_{12}h_{21}} \cdot y_1 + \frac{h_{11}}{h_{11}h_{22} - h_{12}h_{21}} \cdot y_2
+\end{align*}
 
+\begin{equation*}
+  \begin{bmatrix*}
+    y_1 \\ y_2
+  \end{bmatrix*}
+
+  \begin{bmatrix*}
+    h_{11} & h_{12} \\
+    h_{21} & h_{22}
+  \end{bmatrix*}
+
+\end{equation*}
 
 
 \end{document}
