--- a/siki.tex
+++ b/siki.tex
@@ -129,17 +129,50 @@
   S_2 &= - \frac{h_{21}}{h_{11}h_{22} - h_{12}h_{21}} \cdot y_1 + \frac{h_{11}}{h_{11}h_{22} - h_{12}h_{21}} \cdot y_2
 \end{align*}
 
-\begin{equation*}
-  \begin{bmatrix*}
-    y_1 \\ y_2
-  \end{bmatrix*}
+% \begin{equation*}
+%   \begin{bmatrix*}
+%     y_1 \\ y_2
+%   \end{bmatrix*}
 
-  \begin{bmatrix*}
+%   \begin{bmatrix*}
+%     h_{11} & h_{12} \\
+%     h_{21} & h_{22}
+%   \end{bmatrix*}
+
+% \end{equation*}
+
+\begin{equation*}
+  \begin{bmatrix}
+    y_1 \\
+    y_2
+    \end{bmatrix}
+    =
+    \begin{bmatrix}
     h_{11} & h_{12} \\
     h_{21} & h_{22}
-  \end{bmatrix*}
-
+    \end{bmatrix}
+    \cdot
+    \begin{bmatrix}
+    s_1 \\
+    s_2
+    \end{bmatrix}
 \end{equation*}
 
+\begin{equation*}
+  \begin{bmatrix}
+    s_1 \\
+    s_2
+    \end{bmatrix}
+    =
+    \begin{bmatrix}
+    h_{11} & h_{12} \\
+    h_{21} & h_{22}
+    \end{bmatrix}^{-1}
+    \cdot
+    \begin{bmatrix}
+    y_1 \\
+    y_2
+    \end{bmatrix}
+\end{equation*}
 
 \end{document}
