--- a/siki.tex
+++ b/siki.tex
@@ -156,6 +156,11 @@
     s_1 \\
     s_2
     \end{bmatrix}
+    +
+    \begin{bmatrix}
+      n_1\\
+      n_2
+    \end{bmatrix}
 \end{equation*}
 
 \begin{equation*}
