--- a/siki.tex
+++ b/siki.tex
@@ -180,4 +180,10 @@
     \end{bmatrix}
 \end{equation*}
 
+\section*{株式会社 ゼネット}
+\begin{itemize}
+  \item 設立\\1999年
+  \item 技術者合計\\198名
+  \item 事業内容\\金融機関のシステム開発や保守,ERP事業,\\AWS事業や研修事業まで幅広く活躍.
+\end{itemize}
 \end{document}
