--- a/siki.tex
+++ b/siki.tex
@@ -180,6 +180,30 @@
     \end{bmatrix}
 \end{equation*}
 
+\begin{align*}
+  G &= HH^H\\
+    % &=
+    % \begin{bmatrix}
+    %   |h_{11}|^2+|h_{12}|^2 & h_{11}h_{21}^*+h_{12}h_{22}^*\\
+    %   h_{11}^*h_{21}+h_{12}^*h_{22} & |h_{21}|^2+|h_{22}|^2
+    % \end{bmatrix}
+\end{align*}
+
+\begin{align*}
+  H &= UDV^H\\
+    &=
+    \begin{bmatrix}
+      u_1 & u_2
+    \end{bmatrix}
+    \begin{bmatrix}
+      \sqrt{\lambda_1} & 0\\
+      0 & \sqrt{\lambda_2}
+    \end{bmatrix}
+    \begin{bmatrix}
+      v_1 & v_2
+    \end{bmatrix}^H
+\end{align*}
+
 \section*{株式会社 ゼネット}
 \begin{itemize}
   \item 設立\\1999年
