--- a/siki.tex
+++ b/siki.tex
@@ -204,6 +204,22 @@
     \end{bmatrix}^H
 \end{align*}
 
+\begin{equation*}
+  U^H =
+  \begin{bmatrix}
+    u_1 & u_2
+  \end{bmatrix}^H
+\end{equation*}
+
+\begin{equation*}
+  V =
+  \begin{bmatrix}
+    v_1 & v_2
+  \end{bmatrix}
+\end{equation*}
+
+$\sqrt{\lambda_1},\sqrt{\lambda_2}$
+
 \section*{株式会社 ゼネット}
 \begin{itemize}
   \item 設立\\1999年
