--- a/siki.tex
+++ b/siki.tex
@@ -218,7 +218,25 @@
   \end{bmatrix}
 \end{equation*}
 
-$\sqrt{\lambda_1},\sqrt{\lambda_2}$
+$\sqrt{\lambda_1},\sqrt{\lambda_2},\sqrt{\lambda_j}$
+
+\begin{equation*}
+  \begin{bmatrix}
+    s_1(t)\\
+    s_2(t)\\
+    \vdots\\
+    s_J(t)\\
+  \end{bmatrix}
+\end{equation*}
+
+\begin{equation*}
+  \begin{bmatrix}
+    \sqrt{\lambda_1}s_1(t)\\
+    \sqrt{\lambda_2}s_2(t)\\
+    \vdots\\
+    \sqrt{\lambda_J}s_j(t)\\
+  \end{bmatrix}
+\end{equation*}
 
 \section*{株式会社 ゼネット}
 \begin{itemize}
