--- a/11/graph.ipynb
+++ b/11/graph.ipynb
@@ -8198,7 +8198,7 @@
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "%config InlineBackend.figure_formats = [\"svg\"]\n",
+    "# %config InlineBackend.figure_formats = [\"svg\"]・\n",
     "\n",
     "# 標準偏差を設定\n",
     "std_dev = 30*10**(-9)\n",
@@ -9400,7 +9400,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -9414,10 +9414,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
-  },
-  "orig_nbformat": 4
+   "version": "3.11.0"
+  }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
