--- a/siki.tex
+++ b/siki.tex
@@ -276,12 +276,21 @@ $\sqrt{\lambda_1},\sqrt{\lambda_2},\sqrt{\lambda_j}$
       0_{N_R \times (N_T - N_R)} & H^{(2)}W^{(2)}
     \end{bmatrix}
 \end{align*}
-% \section*{株式会社 ゼネット}
-% \begin{itemize}
-%   \item 設立\\1999年
-%   \item 技術者合計\\198名
-%   \item 事業内容\\金融機関のシステム開発や保守,ERP事業,\\AWS事業や研修事業まで幅広く活躍.
-% \end{itemize}
+
+\section*{株式会社 ゼネット}
+\begin{itemize}
+  \item 設立\\1999年
+  \item 技術者合計\\198名
+  \item 事業内容\\金融機関のシステム開発や保守,ERP事業,\\AWS事業や研修事業まで幅広く活躍.
+\end{itemize}
+
+\begin{align*}
+  D &=
+  \begin{bmatrix}
+    \sqrt{\lambda_1} & 0\\
+    0 & \sqrt{\lambda_2}
+  \end{bmatrix}
+\end{align*}
 
 
 \end{document}
